fix: non fork PRs should also run CI

--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -5,15 +5,12 @@ on:
     branches:
       - main
   pull_request:
-    # Basic checks for all PRs (no secrets)
   pull_request_target:
-    # Full tests with secrets (runs in base repo context)
     types: [opened, synchronize, reopened]
 
 jobs:
-  # Always run basic checks (no secrets needed)
-  basic_checks:
-    if: github.event_name == 'pull_request' || github.event_name == 'push'
+  # Basic checks for all PRs
+  analyze:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -26,22 +23,37 @@ jobs:
         with:
           fatal-infos: true
           fatal-warnings: true
+
+  format:
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    steps:
+      - uses: actions/checkout@v2
+      - uses: subosito/flutter-action@v2
+        with:
+          channel: 'stable'
+      - uses: bluefireteam/melos-action@v2
       - name: "Check formatting"
         run: melos run format-check
 
-  # Full tests - requires approval for external PRs
   test_linux:
-    if: github.event_name == 'push' || github.event_name == 'pull_request_target'
+    # Run for: pushes, your PRs, and approved external PRs
+    if: |
+      github.event_name == 'push' ||
+      (github.event_name == 'pull_request' && github.event.pull_request.head.repo.fork == false) ||
+      github.event_name == 'pull_request_target'
     runs-on: ubuntu-latest
     timeout-minutes: 25
-    environment: CI Environment  # This triggers the approval workflow
+    environment: 
+      # Only require approval for external PRs (forks)
+      name: ${{ github.event.pull_request.head.repo.fork == true && 'CI Environment' || '' }}
     env:
       FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
       FIREBASE_SERVICE_ACCOUNT: ${{ secrets.FIREBASE_SERVICE_ACCOUNT }}
     steps:
       - uses: actions/checkout@v2
         with:
-          # Important: checkout the PR head for pull_request_target
+          # Use correct ref for each event type
           ref: ${{ github.event.pull_request.head.sha || github.ref }}
       - uses: subosito/flutter-action@v2
         with:
@@ -61,10 +73,14 @@ jobs:
           FIREBASE_TOKEN: ${{ env.FIREBASE_TOKEN }}
 
   test_macos:
-    if: github.event_name == 'push' || github.event_name == 'pull_request_target'
+    if: |
+      github.event_name == 'push' ||
+      (github.event_name == 'pull_request' && github.event.pull_request.head.repo.fork == false) ||
+      github.event_name == 'pull_request_target'
     runs-on: macos-latest
     timeout-minutes: 25
-    environment: CI Environment
+    environment: 
+      name: ${{ github.event.pull_request.head.repo.fork == true && 'CI Environment' || '' }}
     env:
       FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
       FIREBASE_SERVICE_ACCOUNT: ${{ secrets.FIREBASE_SERVICE_ACCOUNT }}
@@ -93,10 +109,14 @@ jobs:
           FIREBASE_TOKEN: ${{ env.FIREBASE_TOKEN }}
   
   test_windows:
-    if: github.event_name == 'push' || github.event_name == 'pull_request_target'
+    if: |
+      github.event_name == 'push' ||
+      (github.event_name == 'pull_request' && github.event.pull_request.head.repo.fork == false) ||
+      github.event_name == 'pull_request_target'
     runs-on: windows-latest
     timeout-minutes: 25
-    environment: CI Environment
+    environment: 
+      name: ${{ github.event.pull_request.head.repo.fork == true && 'CI Environment' || '' }}
     env:
       FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
       FIREBASE_SERVICE_ACCOUNT: ${{ secrets.FIREBASE_SERVICE_ACCOUNT }}
